--- a/trunk/nbproject/private/private.properties
+++ b/trunk/nbproject/private/private.properties
@@ -7,4 +7,4 @@ copy.src.files=false
 copy.src.target=
 index.file=index.php
 run.as=LOCAL
-url=http://localhost/DisulfideBond/
+url=http://localhost/ms2db++/
